--- a/style.css
+++ b/style.css
@@ -1,21 +1,50 @@
 @import url('https://fonts.googleapis.com/css?family=Muli');
 body {
-  	margin: 0 auto;
   	font-family: 'Muli', sans-serif;
+  	background-color: #ecf1f2;
 }
 * {
 	box-sizing: border-box;
 }
+.row:before, 
+.row:after {
+	content: "";
+	display: table ;
+	clear: both;
+ }
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
 .container {
-	background-image: url(img/map.jpeg);
-	background-repeat: no-repeat;
-  	background-size: cover;
-  	height: 100vh;
-	opacity: 0.8;
+	width: 100%;
+	margin: 0 auto;
 }
+[class*="col-"] {
+	float: left;
+	min-height: 1px;
+	padding: 5px;
+}
+
 .text {
 	padding: 5%;
 }
+img {
+	padding: 5%;
+	width: 100%;
+	height: auto;
+}
+
 button {
 	font-family: 'Muli', sans-serif;
 	font-size: 18px;
@@ -34,12 +63,26 @@ input {
 }
 button, input {
 	border-radius: 5px;
-	border: 1px solid blue;
+	border: 1px solid #a5c8db;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-}
-@media (max-width:768px) {
-	.container {
-		background-image: url(img/map-min.png);
+@media (max-width: 767px) {
+
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+
+    img {
+    	margin-top: 10px;
+    }
 }
