--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 .col-12 {width: 100%;}
 
 html {
-	background: url(img/background-light.jpg) no-repeat center center fixed; 
+	background: url(img/background.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
